--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="no_link">No Link</string>
     <string name="browse">Browse</string>
     <string name="dropbox">Dropbox</string>
+    <string name="webdav">WebDAV</string>
     <string name="edit">Edit</string>
     <string name="delete">Delete</string>
     <string name="name">Name</string>
@@ -141,6 +142,12 @@
     <string name="fragment_query_title">Search</string>
     <string name="repo_dropbox_button_not_linked">Link to Dropbox</string>
     <string name="repo_dropbox_button_linked">Unlink from Dropbox</string>
+
+    157     <!-- TODO: put this in other place? -->
+    <string name="repo_webdav_button_not_linked">Link to webDAV server</string>
+    <string name="repo_webdav_button_linked">Unlink from webDAV server</string>
+
+    <string name="fragment_repo_webdav_directory_desc">Directory in your server</string>
     <string name="fragment_settings_title">Settings</string>
     <string name="fragment_agenda_title">Agenda</string>
 
@@ -494,4 +501,6 @@
     <string name="styled_text_with_marks_title">Styled text with marks</string>
     <string name="styled_text_with_marks_summary">Keep marks displayed (e.g. *bold*)</string>
 
+    <string name="fragment_repo_webdav_username_desc">Username (opt)</string>
+    <string name="fragment_repo_webdav_password_desc">Password (opt)</string>
 </resources>
